fix bugs on ios

--- a/kvartirus/css/apartment-form.pcss
+++ b/kvartirus/css/apartment-form.pcss
@@ -1,3 +1,7 @@
+a:any-link {
+    color: inherit;
+}
+
 .main {
     display: flex;
     justify-content: center;
@@ -27,6 +31,10 @@
         letter-spacing: 0.1em;
         z-index: 400;
         box-shadow: 0px 3px 6px rgba(46, 107, 245, 0.3), 0px 3px 14px rgba(46, 107, 245, 0.2);
+
+        &:link, &:visited {
+            color: #fff;
+        }
     }
 
     &__progress-bar {
@@ -183,7 +191,7 @@
             & input[type="date"] {
                 height: 53px;
                 box-sizing: border-box;
-                width: 100%;
+                min-width: 90%;
 
                 &::-webkit-calendar-picker-indicator {
                    height: 100%;
@@ -224,6 +232,7 @@
             }
             &-tel {
                 align-content: center;
+
                 &::after {
                     content: '';
                     display: block;
@@ -315,6 +324,8 @@
                         position: absolute;
                         min-width: 100%;
                         min-height: 100%;
+                        border-radius: 12px;
+                        z-index: -10;
                     }
                 }
             }
